--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="text-wrapper">
                         <h1 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Sobre nós</strong></h1>
                         <p class="mbr-text mbr-fonts-style display-7">A&nbsp;<strong>MoreSales</strong> é uma empresa de representações comerciais sediada em Curitiba/PR. Temos experiência no setor de vendas e negociações.<br><br>Estamos sempre abertos a novas parcerias e valorizamos relações sólidas e transparentes. Trabalhamos duro para o sucesso dos nossos clientes e o nosso, fortalecendo ambos os lados.</p>
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://api.whatsapp.com/send?phone=5541995908221" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>Contato&nbsp;</a></div>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://api.whatsapp.com/send?phone=5541995908221" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>WhatsApp&nbsp;</a></div>
                     </div>
                 </div>
             </div>
