--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
                         <a href="index.html#top"><img src="assets/images/logo-moresales-2.svg" alt="MoreSales" style="height: 3rem;"></a>
                     </span>
                 </div>
+                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#header14-5">Sobre</a></li></ul>
                     <div class="icons-menu">
